--- a/projeto/templates/base.html
+++ b/projeto/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<!-- template -->
+
     <head>
         <title>Backend Python - EBAC</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
